Testing improvements